--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "web-vitals": "^2.1.4",
     "yup": "^1.3.2"
   },
+  "proxy":"http://localhost:8080" ,
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
