--- a/package.json
+++ b/package.json
@@ -22,7 +22,6 @@
     "web-vitals": "^2.1.4",
     "yup": "^1.3.2"
   },
-  "proxy":"http://localhost:8080" ,
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
@@ -46,5 +45,12 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "proxy": "http://43.200.252.239:53702",
+  "script": {
+    "start": "react-script start",
+    "build": "react-script build",
+    "test": "react-scripts tests"
   }
 }
+
