--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "formik": "^2.4.5",
     "http-proxy-middleware": "^2.0.6",
     "react": "^18.2.0",
+    "react-daum-postcode": "^3.1.3",
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.17.0",
@@ -45,12 +46,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "proxy": "http://43.200.252.239:53702",
-  "script": {
-    "start": "react-script start",
-    "build": "react-script build",
-    "test": "react-scripts tests"
   }
 }
-
