--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "formik": "^2.4.5",
     "http-proxy-middleware": "^2.0.6",
     "react": "^18.2.0",
+    "react-daum-postcode": "^3.1.3",
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.17.0",
@@ -22,7 +23,6 @@
     "web-vitals": "^2.1.4",
     "yup": "^1.3.2"
   },
-  "proxy":"http://localhost:8080" ,
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
